Update template, just a tiny bit

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,9 @@
 </header>
 
 {% if site.author.bio %}
+<div class="text-center">
+	<h3>{{ site.author.name }}</h3>
+</div>
 <div id="bio" class="text-center">
 	{{ site.author.bio }}
 </div>
