--- a/_includes/post.html
+++ b/_includes/post.html
@@ -92,7 +92,7 @@
       </section>
 
       <section class="col-sm-6 author">
-        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAb_AAAAJDI0OTNjNWU0LTczNmItNDY0Yi05NWQwLTA2NTI0MjQyODZjNg.jpg" class="img-rounded author-image" />
+        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAb_AAAAJDI0OTNjNWU0LTczNmItNDY0Yi05NWQwLTA2NTI0MjQyODZjNg.jpg" class="img-rounded author-image img-circle" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
         <p class="author-bio">{{site.author.bio}}</p>
       </section>
